<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">
    
    <RelativeLayout 
        android:id="@+id/settingsSemesterContainer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#f7f7f7">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="bottom"
                android:paddingLeft="5dp"
                android:text="@string/select_semester_"
                android:textSize="18sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="top"
                android:paddingLeft="5dp"
                android:text="@string/overrides_automatic_detection"
                android:textSize="12sp" />
            
        </LinearLayout>
        
        <ImageView
            android:id="@+id/settingsSwitchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/s1_active"
            android:layout_marginRight="5dp"
            android:tag="s1_active" android:contentDescription="@string/switch_icon"/>
        
    </RelativeLayout>
    
    <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#f7f7f7">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="bottom"
                android:paddingLeft="5dp"
                android:text="@string/last_data_download"
                android:textSize="18sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="top"
                android:paddingLeft="5dp"
                android:text="@string/date_and_time_of_the_last_download"
                android:textSize="12sp" />
            
        </LinearLayout>
        
        <TextView
            android:textSize="13sp"
            android:id="@+id/settingsLastDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"/>
        
    </RelativeLayout>
    <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>

    
</LinearLayout>