<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/detailTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"/>
    
    <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>

   <LinearLayout 
       android:layout_height="40dp"
       android:layout_width="match_parent"
       android:orientation="horizontal">
        
       <View 
           android:layout_width="4dp"
           android:layout_height="match_parent"
           android:background="#0099CC"/>
       
		<TextView 
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:gravity="center_vertical"
		    android:paddingLeft="7dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"
		    android:text="@string/lecturer_"/>
		
		<TextView 
		    android:id="@+id/detailLecturer"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:paddingLeft="10dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"/>
       
   </LinearLayout>
   
   <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>
   
   <LinearLayout 
       android:layout_height="40dp"
       android:layout_width="match_parent"
       android:orientation="horizontal">
		
       <View 
           android:layout_width="4dp"
           android:layout_height="match_parent"
           android:background="#FF8800"/>
       
		<TextView 
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:gravity="center_vertical"
		    android:paddingLeft="7dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"
		    android:text="@string/euclid_code_"/>
		
		<TextView
		    android:id="@+id/detailEuclid"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:paddingLeft="10dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"/>
       
   </LinearLayout>
   
   <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>
   
    <LinearLayout 
       android:layout_height="40dp"
       android:layout_width="match_parent"
       android:orientation="horizontal">
		
       <View 
           android:layout_width="4dp"
           android:layout_height="match_parent"
           android:background="#669900"/>
       
		<TextView 
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:gravity="center_vertical"
		    android:paddingLeft="7dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"
		    android:text="@string/years_"/>
		
		<TextView 
		    android:id="@+id/detailYears"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:paddingLeft="10dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"/>
       
   </LinearLayout>	
   
    <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>
   
    <LinearLayout 
       android:layout_height="40dp"
       android:layout_width="match_parent"
       android:orientation="horizontal">
		
       <View 
           android:layout_width="4dp"
           android:layout_height="match_parent"
           android:background="#CC0000"/>
       
		<TextView 
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:gravity="center_vertical"
		    android:paddingLeft="7dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"
		    android:text="@string/degrees_"/>
		
		<TextView 
		    android:id="@+id/detailDegrees"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:paddingLeft="10dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"/>
       
   </LinearLayout>	
   
    <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>
   
   <LinearLayout 
       android:layout_height="40dp"
       android:layout_width="match_parent"
       android:orientation="horizontal">
		
       <View 
           android:layout_width="4dp"
           android:layout_height="match_parent"
           android:background="#9933CC"/>
       
		<TextView 
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:gravity="center_vertical"
		    android:paddingLeft="7dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"
		    android:text="@string/semester_"/>
		
		<TextView 
		    android:id="@+id/detailSemester"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:paddingLeft="10dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"/>
       
   </LinearLayout>	
   
   <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>
   
   <LinearLayout 
       android:layout_height="40dp"
       android:layout_width="match_parent"
       android:orientation="horizontal">
        
       <View 
           android:layout_width="4dp"
           android:layout_height="match_parent"
           android:background="#0099CC"/>
       
		<TextView 
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:gravity="center_vertical"
		    android:paddingLeft="7dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"
		    android:text="@string/credit_"/>
		
		<TextView 
		    android:id="@+id/detailCredit"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:paddingLeft="10dp"
		    android:layout_width="100dp"
		    android:layout_height="match_parent"/>
       
   </LinearLayout>

   <View 
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#DADADA"/>
   
   <LinearLayout 
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:orientation="horizontal">
		
       <View 
           android:layout_width="4dp"
           android:layout_height="match_parent"
           android:background="#FF8800"/>
       
		<TextView 
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:gravity="center_vertical"
		    android:paddingLeft="7dp"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:text="@string/lectures_"/>
		
		<ListView 
		    android:layout_weight="1"
	       android:id="@+id/detailLectures"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content">
       
   </ListView>
		
       
   </LinearLayout>
   
   

</LinearLayout>
